[package]
name = "enc_dec_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0.56"
anyhow = "1.0.64"
# openssl = "0.10.41"
chacha20poly1305 = { version = "0.10.1", features = ["stream"]}
rand = "0.8.5"
bytes = "1.2.1"
hex = "0.4.3"
structopt = "0.3.25"
async-recursion = "1.0.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]